fix: add directory-based pages for App Router and update links

--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,11 @@
       <a href="/alt-page" class="button alt">View Alt Page</a>
     </div>
     
+    <div class="buttons">
+      <a href="/pages/expense" class="button">Expenses</a>
+      <a href="/pages/income" class="button alt">Income</a>
+    </div>
+    
     <p>If you're seeing this page, it means the static HTML is being served correctly, but the Next.js application might be experiencing issues.</p>
   </div>
 </body>
